--- a/start-page.html
+++ b/start-page.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-<meta content="utf-8" http-equiv="encoding">
+ <head>
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+  <meta name="description" content="Start Page">
+  <meta name="keywords" content="StartPage">
+  <meta name="author" content="Chris Lamke">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head> 
 
 <style>
 :root{
@@ -47,6 +52,7 @@ h2 {
 
 h3 {
   color:white;
+  margin-top: 10px; margin-right: 10px; margin-bottom: 10px; margin-left: 10px;
   font-family: Tahoma, Geneva, sans-serif; font-size:18px;
 }
 
@@ -58,7 +64,7 @@ p {
 
 hr {
   color:white; background-color:white; 
-  margin-right:10px; margin-left:10px; 
+  margin-top: 5px; margin-right: 10px; margin-bottom: 5px; margin-left: 10px;
   height:1px;
   border:none;
 }
@@ -81,15 +87,22 @@ hr {
 #square5 { background-color: var(--purpleish-color); }
 
 #status {
-  padding-left:16px; padding-bottom:16px; margin: 8px;
+  padding-left:8px; padding-bottom:16px; margin: 8px;
   font-family: 'Times', sans-serif; font-size: 16px;
   color:var(--whitish-color);
 }
 
 .statusDisplay {
-  padding-left:16px; padding-bottom:6px;
+  padding-left:8px; padding-bottom:6px;
   font-family: 'Times', sans-serif; font-size: 16px;
   color:var(--whitish-color);
+}
+
+
+.statusDisplayLabel {
+  display: inline-block;
+  width: 110px;
+  /* font-weight: bold; */
 }
 
 .alarmButton {
@@ -105,6 +118,10 @@ hr {
   align: right;
 }
 
+.timerButton {
+  margin-top: 8px; margin-right: 8px;
+}
+
 .rectangle-container {
   display: flex;
   flex-wrap: wrap;
@@ -114,7 +131,7 @@ hr {
 .rectangle {
 position: relative;
 flex-basis: calc(30% - 10px);
-margin: 20px;
+margin-top: 12px; margin-right: 20px; margin-bottom: 12px; margin-left: 20px;
 border: 1px solid;
 box-sizing: border-box;
 width: 300px;
@@ -141,8 +158,8 @@ flex-wrap: wrap;
 
 .square {
 position: relative;
-flex-basis: calc(30% - 10px); 
-margin: 20px;
+flex-basis: calc(30% - 10px);
+margin-top: 12px; margin-right: 20px; margin-bottom: 12px; margin-left: 20px;
 border: 1px solid;
 box-sizing: border-box;
 }
@@ -170,9 +187,9 @@ width: 100%;
   <center><h3>Time and Alarm</h3></center>
   <hr noshade></hr>
 <div id="status">
-<div class="statusDisplay"><b>Current Time: </b> <span id="timeDisplay"></span></div>
-<div class="statusDisplay"><b>Alarm Time: </b> <span id="alarmDisplay"></span><button id="clearButton" class="alarmButton" onclick="clearAlarm()">Clear</button></div>
-<span class="statusDisplay"> <b>Set Alarm: </b> <input title="Format is HH:MM in 24 hour format, e.g. 21:12" type="text" size="5" id="alarmSetTimeInput" onchange="alarmTimeUpdate(this.value)"> <button id="setButton" class="alarmButton" onclick="setAlarm()">Set</button> </span>
+<div class="statusDisplay"><span class="statusDisplayLabel">Current Time:</span><span id="timeDisplay"></span></div>
+<div class="statusDisplay"><span class="statusDisplayLabel">Alarm Time:</span><span id="alarmDisplay"></span><button id="clearButton" class="alarmButton" onclick="clearAlarm()">Clear</button></div>
+<span class="statusDisplay"><span class="statusDisplayLabel">Set Alarm:</span><input title="Format is HH:MM in 24 hour format, e.g. 21:12" type="text" size="5" id="alarmSetTimeInput" onchange="alarmTimeUpdate(this.value)"> <button id="setButton" class="alarmButton" onclick="setAlarm()">Set</button> </span>
 </div>
 </div>
 </div>
@@ -194,11 +211,15 @@ width: 100%;
 <div class="content">
   <center><h3>Timer</h3></center>
   <hr noshade></hr>
-<form role="search" action="https://www.duckduckgo.com/?q" method="get" target="_blank">
-<div id="search" >
-
+<div id="status">
+<div class="statusDisplay"><b>Elapsed: </b> <span id="elapsedDisplay"></span></div>
+<div class="statusDisplay"><b>Split: </b> <span id="splitDisplay"></span></div>
+<div class="statusDisplay">
+  <button id="timerStartButton" class="timerButton" onclick="startTimer()">Start</button>
+  <button id="timerSplitButton" class="timerButton" onclick="markTimerSplit()">Split</button>
+  <button id="timerStopButton" class="timerButton" onclick="stopTimer()">Stop</button>
 </div>
-</form>
+</div>
 </div>
 </div>
 
@@ -266,30 +287,40 @@ var AlarmState = {
   SET: 1
 }
 var alarmState = AlarmState.UNSET;
+var alarmDisplayDefault = "Not Set";
 var alarmSetHour = 0;
 var alarmSetMinute = 0;
 var alarmTimeIsValid = false;
+var elapsedTime = 0;
+var elapsedDisplayDefault = "00:00:00";
+var alarms = new Array();
 
 //var timeRegExp = new RegExp('([01]?\d|2[0-3]):([0-5]\d)');
 
 window.onload = initializePage;
 
 function initializePage() {
-  document.getElementById('alarmDisplay').innerHTML = "Not Set";
+  document.getElementById('alarmDisplay').innerHTML = alarmDisplayDefault;
+  document.getElementById('elapsedDisplay').innerHTML = elapsedDisplayDefault;
+    document.getElementById('splitDisplay').innerHTML = elapsedDisplayDefault;
   keepTime();
 }
 
 function keepTime() {
   var currentTime = new Date();
   
-  var currentTimeFormatted = formatTimeHMS(currentTime);
+  var currentTimeFormatted = formatTimeHMS(currentTime, true);
 
   // Rather than run multiple interval timers, we'll run this one 
   // and then call all the update functions from here. 
   // A register/callback mechanism would be better.
   updateClock(currentTimeFormatted);
-  if (alarmState == AlarmState.SET) { // Only calculate and display this if we're in a requery cycle.
-    //updateSecsTillRequery(currentTime);
+  if (alarmState == AlarmState.SET) {
+    //console.log("delta = " + (alarms[0] - currentTime));
+    if (alarms[0] - currentTime <= 0) {
+	  alert("Ring, ring, ring.\nPress Okay to dismiss.");
+	  alarmState = AlarmState.UNSET;
+	}
   }
   // Use a 1 second (1000 millisecond) tick, good enough for our needs.
   var t = setTimeout(keepTime, 1000);
@@ -299,7 +330,7 @@ function updateClock(newTime) {
   document.getElementById('timeDisplay').innerHTML = newTime;
 }
 
-function formatTimeHMS(timeIn) {
+function formatTimeHMS(timeIn, withSeconds) {
   var hours = timeIn.getHours();
   var minutes = timeIn.getMinutes();
   var seconds = timeIn.getSeconds();
@@ -316,14 +347,16 @@ function formatTimeHMS(timeIn) {
   else {
     hmsTime += minutes;
   }
-  hmsTime += ":";
-  if (seconds < 10) {
-    hmsTime += "0" + seconds;
-  }
-  else {
-    hmsTime += seconds;
-  }
-  
+  if (withSeconds == true) {
+    hmsTime += ":";
+    if (seconds < 10) {
+      hmsTime += "0" + seconds;
+    }
+    else {
+      hmsTime += seconds;
+    }
+  } 
+ 
   return hmsTime;
 }
 
@@ -333,7 +366,6 @@ function alarmTimeUpdate(newValue) {
     var timeParts = newValue.split(":");
     alarmSetHour = timeParts[0];
     alarmSetMinute = timeParts[1];
-	alert(newValue + " breaks into Hour=" + alarmSetHour + " and Minute=" + alarmSetMinute);
 	alarmTimeIsValid = true;
   }
   else {
@@ -345,7 +377,14 @@ function alarmTimeUpdate(newValue) {
 
 function setAlarm() {
   if (alarmTimeIsValid == true) {
-    
+    var date = new Date();
+	date.setHours(alarmSetHour);
+	date.setMinutes(alarmSetMinute);
+	var alarmTimeFormatted = formatTimeHMS(date, false);
+	alarms[alarms.length] = date;
+	document.getElementById('alarmDisplay').innerHTML = alarmTimeFormatted;
+	document.getElementById('alarmSetTimeInput').innerHTML = "";
+	alarmState = AlarmState.SET;
   }
   else {
     alert("Please enter a valid alarm time first.");
@@ -355,5 +394,18 @@ function setAlarm() {
 function clearAlarm() {
 
 }
+
+function startTimer() {
+
+}
+
+function markTimerSplit() {
+
+}
+
+function stopTimer() {
+
+}
+
 
 </script>
