--- a/start-page.html
+++ b/start-page.html
@@ -1,411 +1,162 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-  <meta name="description" content="Start Page">
-  <meta name="keywords" content="StartPage">
-  <meta name="author" content="Chris Lamke">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head> 
+    <link rel="stylesheet" href="start-page-main.css" type="text/css"/>
+    <script src="start-page-main.js"></script> 
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta name="description" content="Start Page">
+    <meta name="keywords" content="StartPage">
+    <meta name="author" content="Chris Lamke">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Start Page</title>
+    <body>
 
-<style>
-:root{
-    --red-color: #f44336;
-	--purple-color: #9c27b0;
-	--pinkish-color: #e91e63;
-	--ltblue-color: #00bcd4;
-	--ltgreen-color: #4caf50;
-	--ltorange-color: #ff9800;
-	--purpleish-color: #9999ff;
-	--dkgrey-color: #404040;
-	--ltgrey-color: #e0e0e0;
-	--blackish-color: #1c0000;
-	--white-color: #ffffff;
-	--whitish-color: #fcf9ff;
-}
+        <div class="rectangle-container">
 
-body { 
-  background-color: #404040; 
-  font-family: 'Arial', sans-serif; font-size: 10pt; 
-}  /* background-image: url("bg.jpg"); */
+            <div class="rectangle" id="rectangle0">
+                <div class="content">
+                    <h3>Time and Alarm</h3>
+                    <hr>
+                    <div id="status">
+                        <div class="statusDisplay"><span class="statusDisplayLabel">Current Time:</span><span id="timeDisplay"></span></div>
+                        <div class="statusDisplay"><span class="statusDisplayLabel">Alarm Time:</span><span id="alarmDisplay"></span><button id="clearButton" class="alarmButton" onclick="clearAlarm()">Clear</button></div>
+                        <span class="statusDisplay"><span class="statusDisplayLabel">Set Alarm:</span><input title="Format is HH:MM in 24 hour format, e.g. 21:12" type="text" size="5" id="alarmSetTimeInput" onchange="alarmTimeUpdate(this.value)"> <button id="setButton" class="alarmButton" onclick="setAlarm()">Set</button> </span>
+                    </div>
+                </div>
+            </div>
 
-#greeting  { 
-  position:center; 
-  margin-left:auto; margin-right:auto; 
-  padding-bottom:8px; padding-top:8px; 
-  font-family: 'Times', sans-serif; font-size: 30pt;
-  color:var(--whitish-color); 
-}
+            <div class="rectangle" id="rectangle1">
+                <div class="content">
+                    <h3>Search</h3>
+                    <hr>
+                    <form role="search" action="https://www.duckduckgo.com/?q" method="get" target="_blank">
+                        <div id="search" >
+                            <input type="search" name="q" placeholder="Search ..." aria-label="Search ...">
+                            <button>Search</button>
+                        </div>
+                    </form>
+                    <div id="searchTarget" >
+                        <div class="statusDisplay"><span class="searchOptionDisplayLabel">With:</span>
+                            <select id="search-target-select" onchange="searchTargetSelect(this.options[this.selectedIndex].value)">
+                                <option value="optDuckDuckGo" >DuckDuckGo</option>
+                                <option value="optGoogle" selected>Google</option>
+                                <option value="optBing">Bing</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-a  {
-  color:white; 
-  font-family: Tahoma, Geneva, sans-serif; font-size:16px;
-  padding-left:15px; padding-bottom:30px; padding-top:8px;
-  text-decoration:none;
-}
+            <div class="rectangle" id="rectangle2">
+                <div class="content">
+                    <h3>Timer</h3>
+                    <hr>
+                    <div id="status">
+                        <div class="statusDisplay"><b>Elapsed: </b> <span id="elapsedDisplay"></span></div>
+                        <div class="statusDisplay"><b>Split: </b> <span id="splitDisplay"></span></div>
+                        <div class="statusDisplay">
+                            <button id="timerStartButton" class="timerButton" onclick="startTimer()">Start</button>
+                            <button id="timerSplitButton" class="timerButton" onclick="markTimerSplit()">Split</button>
+                            <button id="timerStopButton" class="timerButton" onclick="stopTimer()">Stop</button>
+                            <button id="timerResetButton" class="timerButton" onclick="resetTimer()">Reset</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-h2 {
-  color:white; 
-  font-family: Tahoma, Geneva, sans-serif; font-size:30px;
-  padding-left:15px;
-}
-
-h3 {
-  color:white;
-  margin-top: 10px; margin-right: 10px; margin-bottom: 10px; margin-left: 10px;
-  font-family: Tahoma, Geneva, sans-serif; font-size:18px;
-}
-
-p {
-  color:white;
-  font-family: Tahoma, Geneva, sans-serif; font-size:20px;
-  border:0px;
-}
-
-hr {
-  color:white; background-color:white; 
-  margin-top: 5px; margin-right: 10px; margin-bottom: 5px; margin-left: 10px;
-  height:1px;
-  border:none;
-}
-
-#search {
-  padding-left:16px; padding-bottom:8px; padding-top:8px;
-  height:24px;
-  font-size:18px;
-}
-
-#rectangle0 { background-color: var(--dkgrey-color); }
-#rectangle1 { background-color: var(--dkgrey-color); }
-#rectangle3 { background-color: var(--dkgrey-color); }
-
-#square0 { background-color: var(--red-color); }
-#square1 { background-color: var(--ltgreen-color); }
-#square2 { background-color: var(--purple-color); }
-#square3 { background-color: var(--pinkish-color); }
-#square4 { background-color: var(--ltorange-color); }
-#square5 { background-color: var(--purpleish-color); }
-
-#status {
-  padding-left:8px; padding-bottom:16px; margin: 8px;
-  font-family: 'Times', sans-serif; font-size: 16px;
-  color:var(--whitish-color);
-}
-
-.statusDisplay {
-  padding-left:8px; padding-bottom:6px;
-  font-family: 'Times', sans-serif; font-size: 16px;
-  color:var(--whitish-color);
-}
+        </div> <!-- end rectangle-container -->
 
 
-.statusDisplayLabel {
-  display: inline-block;
-  width: 110px;
-  /* font-weight: bold; */
-}
+        <div class="square-container">
 
-.alarmButton {
-  margin-left:16px;
-}
+            <div class="square" id="square0">
+                <div class="content">
+                    <h3>Google</h3>
+                    <hr>
+                    <a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a><br>
+                    <a href="https://messages.google.com/web">Messages</a><br>
+                    <a href="https://calendar.google.com/calendar/r">Cal</a><br>
+                </div>
+            </div>
 
-.setButton {
-  align: right;
-  margin-left: 20px;
-}
+            <div class="square" id="square1">
+                <div class="content spread">
+                    <h3>dev</h3>
+                    <hr>
+                    <a href="https://github.com/">GitHub</a><br>
+                    <a href="https://rocketchat.geointservices.io/group/safehouse">Rocket Chat</a><br>
+                    <a href="https://ecds.nga.mil/glide/">GLIDE</a><br>
+                    <a href="https://gitlab.devops.geointservices.io/users/sign_in">ADAM GitLab</a><br>
+                    <a href="https://workspace.myngc.com/">NGC Workspace</a><br>
 
-.clearButton {
-  align: right;
-}
+                </div>
+            </div>
 
-.timerButton {
-  margin-top: 8px; margin-right: 8px;
-}
+            <div class="square" id="square2">
+                <div class="content">
+                    <h3>Reading</h3>
+                    <hr>
+                    <a href="https://getpocket.com/a/queue/">Pocket</a><br>
+                    <a href="https://news.ycombinator.com/">Hacker News</a><br>
+                    <a href="https://www.bbc.com/news">BBC News</a><br>
+                    <a href="https://apnews.com/">AP News</a><br>
 
-.rectangle-container {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
+                </div>
+            </div>
 
-.rectangle {
-position: relative;
-flex-basis: calc(30% - 10px);
-margin-top: 12px; margin-right: 20px; margin-bottom: 12px; margin-left: 20px;
-border: 1px solid;
-box-sizing: border-box;
-width: 300px;
-height: 150px;
-}
+            <div class="square" id="square3">
+                <div class="content">
+                </div>
+            </div>
 
-.rectangle::before {
-content: '';
-display: block;
-padding-top: 100%;
-}
+            <div class="square" id="square4">
+                <div class="content">
+                </div>
+            </div>
 
-.rectangle .content {
-position: absolute;
-top: 0; left: 0;
-height: 100%;
-width: 100%;
-}
-
-.square-container {
-display: flex;
-flex-wrap: wrap;
-}
-
-.square {
-position: relative;
-flex-basis: calc(30% - 10px);
-margin-top: 12px; margin-right: 20px; margin-bottom: 12px; margin-left: 20px;
-border: 1px solid;
-box-sizing: border-box;
-}
-
-.square::before {
-content: '';
-display: block;
-padding-top: 100%;
-}
-
-.square .content {
-position: absolute;
-top: 0; left: 0;
-height: 100%;
-width: 100%;
-}
-</style>
-
-<body>
-
-<div class="rectangle-container">
-
-<div class="rectangle" id="rectangle0">
-<div class="content">
-  <center><h3>Time and Alarm</h3></center>
-  <hr noshade></hr>
-<div id="status">
-<div class="statusDisplay"><span class="statusDisplayLabel">Current Time:</span><span id="timeDisplay"></span></div>
-<div class="statusDisplay"><span class="statusDisplayLabel">Alarm Time:</span><span id="alarmDisplay"></span><button id="clearButton" class="alarmButton" onclick="clearAlarm()">Clear</button></div>
-<span class="statusDisplay"><span class="statusDisplayLabel">Set Alarm:</span><input title="Format is HH:MM in 24 hour format, e.g. 21:12" type="text" size="5" id="alarmSetTimeInput" onchange="alarmTimeUpdate(this.value)"> <button id="setButton" class="alarmButton" onclick="setAlarm()">Set</button> </span>
-</div>
-</div>
-</div>
-
-<div class="rectangle" id="rectangle1">
-<div class="content">
-  <center><h3>Search</h3></center>
-  <hr noshade></hr>
-<form role="search" action="https://www.duckduckgo.com/?q" method="get" target="_blank">
-<div id="search" >
-    <input type="search" name="q" placeholder="Search ..." aria-label="Search ...">
-	<button>Search</button>
-</div>
-</form>
-</div>
-</div>
-
-<div class="rectangle" id="rectangle3">
-<div class="content">
-  <center><h3>Timer</h3></center>
-  <hr noshade></hr>
-<div id="status">
-<div class="statusDisplay"><b>Elapsed: </b> <span id="elapsedDisplay"></span></div>
-<div class="statusDisplay"><b>Split: </b> <span id="splitDisplay"></span></div>
-<div class="statusDisplay">
-  <button id="timerStartButton" class="timerButton" onclick="startTimer()">Start</button>
-  <button id="timerSplitButton" class="timerButton" onclick="markTimerSplit()">Split</button>
-  <button id="timerStopButton" class="timerButton" onclick="stopTimer()">Stop</button>
-</div>
-</div>
-</div>
-</div>
-
-</div> <!-- end rectangle-container -->
+            <div class="square" id="square5">
+                <div class="content">
+                </div>
+            </div>
 
 
-<!-- <div id="greeting">   <center>Good Morning</center> </div> -->
+        </div>
+
+        <div class="rectangle-container">
 
 
-		
-<div class="square-container">
+            <div class="rectangle" id="rectangle3">
+                <div class="content">
+                    <h3>Notes</h3>
+                    <hr>
+                </div>
+            </div>
 
-<div class="square" id="square0">
-<div class="content">
-  <center><h3>Google</h3></center>
-  <hr noshade></hr>
-  <a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a><br>
-  <a href="https://messages.google.com/web">Messages</a><br>
-  <a href="https://calendar.google.com/calendar/r">Cal</a><br>
-</div>
-</div>
+            <div class="rectangle" id="rectangle4">
+                <div class="content">
+                    <h3>Etc</h3>
+                    <hr>
+                </div>
+            </div>
 
-<div class="square" id="square1">
-<div class="content spread">
-  <center><h3>dev</h3></center>
-  <hr noshade></hr>
-  <a href="https://github.com/">GitHub</a><br>
-</div>
-</div>
+            <div class="rectangle" id="rectangle5">
+                <div class="content">
+                    <h3>Page Settings</h3>
+                    <hr>
+<div class="statusDisplay">Load Settings File</div>
+                    <input type="file" id="fileUpload" />
+                    <input type="button" id="upload" value="Upload" onclick="Upload()" />
+                    <b>Test: </b><span id="testDisplay" class="statusDisplay"></span>
+                    <b>Status: </b><span id="statusDisplay" class="statusDisplay"></span>
+                    <b>Search: </b><input type="text" size="256" id="searchInput" onchange="search(this.value)">
+                    <hr />
+                    <div id="dvCSV"></div>
+                    <div id="testDiv">Test Content Below.</div>
+                </div>
+            </div>
 
-<div class="square" id="square2">
-<div class="content column">
-  <center><h3>Reading</h3></center>
-  <hr noshade></hr>
-  <a href="https://getpocket.com/a/queue/">Pocket</a><br>
-  <a href="https://news.ycombinator.com/">Hacker News</a><br>
-</div>
-</div>
+        </div> <!-- end rectangle-container -->
 
-<div class="square" id="square3">
-<div class="content spread">
-</div>
-</div>
-
-<div class="square" id="square4">
-<div class="content column">
-</div>
-</div>
-
-<div class="square" id="square5">
-<div class="content column">
-</div>
-</div>
-
-
-</div>
-<body>
+    </body>
 
 </html>
 
-<script>
-
-var AlarmState = {
-  UNSET: 0,
-  SET: 1
-}
-var alarmState = AlarmState.UNSET;
-var alarmDisplayDefault = "Not Set";
-var alarmSetHour = 0;
-var alarmSetMinute = 0;
-var alarmTimeIsValid = false;
-var elapsedTime = 0;
-var elapsedDisplayDefault = "00:00:00";
-var alarms = new Array();
-
-//var timeRegExp = new RegExp('([01]?\d|2[0-3]):([0-5]\d)');
-
-window.onload = initializePage;
-
-function initializePage() {
-  document.getElementById('alarmDisplay').innerHTML = alarmDisplayDefault;
-  document.getElementById('elapsedDisplay').innerHTML = elapsedDisplayDefault;
-    document.getElementById('splitDisplay').innerHTML = elapsedDisplayDefault;
-  keepTime();
-}
-
-function keepTime() {
-  var currentTime = new Date();
-  
-  var currentTimeFormatted = formatTimeHMS(currentTime, true);
-
-  // Rather than run multiple interval timers, we'll run this one 
-  // and then call all the update functions from here. 
-  // A register/callback mechanism would be better.
-  updateClock(currentTimeFormatted);
-  if (alarmState == AlarmState.SET) {
-    //console.log("delta = " + (alarms[0] - currentTime));
-    if (alarms[0] - currentTime <= 0) {
-	  alert("Ring, ring, ring.\nPress Okay to dismiss.");
-	  alarmState = AlarmState.UNSET;
-	}
-  }
-  // Use a 1 second (1000 millisecond) tick, good enough for our needs.
-  var t = setTimeout(keepTime, 1000);
-}
-
-function updateClock(newTime) {
-  document.getElementById('timeDisplay').innerHTML = newTime;
-}
-
-function formatTimeHMS(timeIn, withSeconds) {
-  var hours = timeIn.getHours();
-  var minutes = timeIn.getMinutes();
-  var seconds = timeIn.getSeconds();
-  if (hours < 10) {
-    hmsTime = "0" + hours;
-  }
-  else {
-    hmsTime = hours;
-  }
-  hmsTime += ":";
-  if (minutes < 10) {
-    hmsTime += "0" + minutes;
-  }
-  else {
-    hmsTime += minutes;
-  }
-  if (withSeconds == true) {
-    hmsTime += ":";
-    if (seconds < 10) {
-      hmsTime += "0" + seconds;
-    }
-    else {
-      hmsTime += seconds;
-    }
-  } 
- 
-  return hmsTime;
-}
-
-function alarmTimeUpdate(newValue) {
-  var timeRegExp = /([01]?\d|2[0-3]):([0-5]\d)/;
-  if (timeRegExp.test(newValue) == true) {
-    var timeParts = newValue.split(":");
-    alarmSetHour = timeParts[0];
-    alarmSetMinute = timeParts[1];
-	alarmTimeIsValid = true;
-  }
-  else {
-    alert (newValue + " is not a valid time. Format is HH:MM in 24 hour format, e.g. 21:12");
-    document.getElementById("alarmSetTimeInput").value = "";
-	alarmTimeIsValid = false;
-  }
-}
-
-function setAlarm() {
-  if (alarmTimeIsValid == true) {
-    var date = new Date();
-	date.setHours(alarmSetHour);
-	date.setMinutes(alarmSetMinute);
-	var alarmTimeFormatted = formatTimeHMS(date, false);
-	alarms[alarms.length] = date;
-	document.getElementById('alarmDisplay').innerHTML = alarmTimeFormatted;
-	document.getElementById('alarmSetTimeInput').innerHTML = "";
-	alarmState = AlarmState.SET;
-  }
-  else {
-    alert("Please enter a valid alarm time first.");
-  }
-}
-
-function clearAlarm() {
-
-}
-
-function startTimer() {
-
-}
-
-function markTimerSplit() {
-
-}
-
-function stopTimer() {
-
-}
-
-
-</script>
