--- a/start-page.html
+++ b/start-page.html
@@ -28,8 +28,8 @@
                 <div class="content">
                     <h3>Search</h3>
                     <hr>
-                    <form role="search" action="https://www.duckduckgo.com/?q" method="get" target="_blank">
-                        <div id="search" >
+                    <form id="searchForm" role="search" action="https://www.duckduckgo.com/?q" method="get" target="_blank">
+                        <div id="searchInput" >
                             <input type="search" name="q" placeholder="Search ..." aria-label="Search ...">
                             <button>Search</button>
                         </div>
