Added reference to new JS files

--- a/start-page.html
+++ b/start-page.html
@@ -8,6 +8,7 @@
     <script src="./user-config.js"></script>
     <script src="./js/timekeeping.js"></script>
     <script src="./js/start-page-rss.js"></script>
+    <script src="./js/add-elements.js"></script>
     <script src="./js/start-page-load-config.js"></script>
     <script src="./js/start-page-search.js"></script>
     <script src="./js/notification.js"></script>
@@ -24,7 +25,7 @@
 
     <body>
 
-        <div class="linkBox-container">
+        <div class="linkBox-container" id="linkBox-container0">
 
             <div class="linkBox" id="linkBox0">
                 <div class="content">
@@ -176,7 +177,6 @@
 
                 </div>
             </div>
-            
 
             <div class="toolBox" class="PageSettings" id="toolBox5">
                 <div class="content">
@@ -194,4 +194,3 @@
 
     </body>
 </html>
-
