Hid toolboxes and updated linkbox add code

--- a/start-page.html
+++ b/start-page.html
@@ -96,7 +96,7 @@
 
         </div>
 
-        <div class="toolBox-container">
+        <div class="toolBox-container" id="toolBox-container0">
 
             <div class="toolBox" class="TimeAndAlarm" id="toolBox0" >
                 <div class="content">
@@ -151,7 +151,7 @@
 
         </div> <!-- end toolBox-container -->
 
-        <div class="toolBox-container">
+        <div class="toolBox-container" id="toolBox-container1">
 
             <div class="toolBox" class="ThemeSelector" id="toolBox3">
                 <div class="content">
