Added weather display and renamed/refactored files.

--- a/start-page.html
+++ b/start-page.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="./css/start-page-main.css" type="text/css"/>
+    <link rel="stylesheet" href="./css/main.css" type="text/css"/>
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <script src="js/jquery-1.6.4.min.js"></script>
     <script src="js/jquery.rss.min.js"></script>
-    <!-- <script src="js/init.js"></script> -->
     <script src="./user-config.js"></script>
     <script src="./js/timekeeping.js"></script>
-    <script src="./js/start-page-rss.js"></script>
-    <script src="./js/add-elements.js"></script>
-    <script src="./js/start-page-load-config.js"></script>
-    <script src="./js/start-page-search.js"></script>
+    <script src="./js/rss-box.js"></script>
+    <script src="./js/weather.js"></script>
+    <script src="./js/link-box.js"></script>
+    <script src="./js/load-config.js"></script>
+    <script src="./js/search-box.js"></script>
     <script src="./js/notification.js"></script>
-    <script src="./js/start-page-db.js"></script>
-    <script src="./js/start-page-themes.js"></script>
-    <script src="./js/start-page-main.js"></script>
+    <script src="./js/main.js"></script>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta name="description" content="Start Page">
     <meta name="keywords" content="StartPage">
